--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,9 @@
         <script src="cookie.js" type="text/javascript"></script>
         <script src="game.js" type="text/javascript"></script>
         <script src="settings.js" type="text/javascript"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
+        <meta name="theme-color" content="#000000"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Jouez au Loup-Garou, mais sans la pénibilité des cartes et d'un maitre du jeu.">
     </head>
     <body>
